...
            type="com.polotech.starwars.feature.details.models.PlanetPresenter" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_character_details">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.polotech.starwars.feature.details.ui.details.DetailsFragment">

            <com.google.android.material.appbar.AppBarLayout
...
                        android:text="@string/label_birth_year"
                        style="@style/Widget.StarWarsSearch.Label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_birth_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@{detailsViewModel.character.birthYear}"
                        style="@style/Widget.StarWarsSearch.Text"
                        app:layout_constraintBottom_toBottomOf="@+id/label_birth_year"
...
                            style="@style/Widget.StarWarsSearch.Label"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_specie_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{species.name}"
                            android:textAllCaps="false"
                            style="@style/Widget.StarWarsSearch.Text"
                            app:layout_constraintBottom_toBottomOf="@+id/label_specie_name"
...
                            style="@style/Widget.StarWarsSearch.Label"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_planet_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{planet.name}"
                            android:textAllCaps="false"
                            style="@style/Widget.StarWarsSearch.Text"
                            app:layout_constraintBottom_toBottomOf="@+id/label_planet_name"
...
